# aquarco

./: .env.example  .envrc.example  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Makefile  README.md  aquarco-bin.spec  aquarco.spec  package-lock.json  prd.json
cli/: pyproject.toml
cli/src/aquarco_cli/: __init__.py  _build.py  config.py  console.py  graphql_client.py  health.py  main.py  task.py  vagrant.py
cli/src/aquarco_cli/commands/: auth.py  backup.py  config.py  init.py  install.py  repos.py  restore.py  run.py  status.py  ui.py  update.py  vm.py  watch.py
cli/tests/: conftest.py  test_api_key_integration.py  test_config.py  test_console.py  test_graphql_client.py  test_health.py  test_main.py  test_task.py  test_vagrant.py  test_vagrantfile_split.py  test_version_consistency.py
cli/tests/test_commands/: test_auth.py  test_backup.py  test_config.py  test_init.py  test_install.py  test_issue71_enhancements.py  test_repos.py  test_restore.py  test_run.py  test_status.py  test_ui.py  test_update.py  test_vm.py  test_watch.py
supervisor/python/: coverage.json  pyproject.toml
supervisor/python/src/aifishtank_supervisor/: __init__.py  config.py  config_overlay.py  config_store.py  database.py  exceptions.py  main.py  models.py  task_queue.py  utils.py
supervisor/python/src/aquarco_supervisor/: __init__.py  agent_autoloader.py  agent_store.py  config.py  config_overlay.py  config_store.py  constants.py  database.py  exceptions.py  logging.py  main.py  models.py  pipeline_store.py  spending.py  stage_manager.py  task_queue.py
supervisor/python/tests/: conftest.py  test_adminer_prod_consistency.py  test_adminer_prod_guardrails.py  test_agent_autoload.py  test_agent_store.py  test_analyze_bug_agent.py  test_auth_helper.py  test_auth_helper_coverage.py  test_auth_helper_fallback_edge_cases.py  test_autoload_removal_regression.py  test_backward_compat.py  test_caddy_cross_compose.py  test_caddy_routing_infra.py  test_caddy_security.py  test_category_rename_consistency.py  test_category_rename_extended.py  test_claude_auth_oauth_sanitization.py  test_cli.py  test_cli_agents.py  test_cli_auth_helper.py  test_cli_auth_helper_login.py  test_cli_auth_helper_trusted_roots.py  test_cli_claude.py  test_cli_claude_extended.py  test_cli_claude_tailing.py  test_cli_config.py  test_cli_repo_manager.py  test_cli_status.py  test_compose_prod_security.py  test_conditions_evaluate.py  test_config.py  test_config_categories.py  test_config_overlay.py  test_config_overlay_autoload.py  test_config_store.py  test_config_store_autoload.py  test_config_store_categories.py  test_database.py  test_dispatch_auth_pausing.py  test_dispatch_auth_pausing_extended.py  (+49 more)
supervisor/python/tests/test_pipeline/: test_agent_invoker.py  test_agent_registry.py  test_agent_registry_hybrid_md.py  test_agent_registry_venv.py  test_conditions.py  test_conditions_extended.py  test_context.py  (+19 more)
(+472 files in other folders)
